# inside-voice

./: README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish.yml  release.yml
src/inside_voice/: __init__.py  app.py  audio.py  cli.py  config.py  widgets.py
tests/: test_app.py  test_audio.py  test_config.py
