[project]
name = "inside-voice"
version = "0.1.0"
description = "A Textual app that reminds you to keep your voice down on calls."
readme = "README.md"
authors = [
    { name = "Christopher Patti", email = "feoh@feoh.org" }
]
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=4.20.0",
    "numpy>=2.4.6",
    "platformdirs>=4.10.0",
    "sounddevice>=0.5.5",
    "textual>=8.2.8",
]

[project.scripts]
inside-voice = "inside_voice.cli:app"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
strict = true

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
